# aurora_visualizer_rust_fbd_recorder

./: .gitignore  Cargo.toml  GEMINI.md  README.md  packages-and-repos.md  src.main.rs
backups/: GEMINI.md.bak  config.rs.20250722-214506.bak  main.rs.20250722-214506.bak  main.rs.bak  projectm_widget.rs.bak
docs/: FEATURES.md  ROADMAP.md  TODO.md  USERS-NOTES_STEP-1.md  progress.md  speec-to-text_lyrics_STT_and_karaoke-style-display_ideas.md
helper_scripts/: cargo-search.sh
helper_scripts/general_shell_Scripts/: backup_source.sh  build-ai-message-of-all-source-code.sh  compile_and_git_ops.sh  (+11 more)
scratchpad/qwen3/: Cargo.toml  README.md  build.rs  commit.sh  rs-gemini.lst.md  run.sh
scratchpad/qwen3/src/: main.rs
scratchpad/qwen3/src/cli/: mod.rs  parser.rs
scratchpad/qwen3/src/config/: mod.rs  settings.rs
scratchpad/qwen3/src/core/: audio_engine.rs  mod.rs  projectm_wrapper.rs  projectm_wrapper.rs.bak.before.finding.exposed.functions
scratchpad/qwen3/src/overlay/: framebuffer.rs  mod.rs  text_renderer.rs
scratchpad/qwen3/src/playlist/: manager.rs  mod.rs
scratchpad/qwen3/src/presets/: favorites.rs  manager.rs  mod.rs
scratchpad/qwen3/src/recording/: ffmpeg_handler.rs  mod.rs
scratchpad/qwen3/src/speech/: mod.rs  recognizer.rs
scratchpad/qwen3/src/ui/: mod.rs  settings_panel.rs  visualization_viewport.rs  window.rs
scratchpad/qwen3/src/utils/: debug.rs  helpers.rs  mod.rs
sdl2-sys-patched/: .cargo_vcs_info.json  build.rs
src/: config.rs  favorites.rs  main.rs  main_app.rs  playback.rs  preset_blocklist.rs  projectm_widget.rs  ui.rs
