[package]
name = "music_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
projectm = { version = "3", features = ["playlist", "static"] }
log = "0.4.21"
env_logger = "0.11.3"
toml = "0.8.13"
directories = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
clap = { version = "4.5.4", features = ["derive"] }
confique = "0.2.0"
egui_glow = "0.27.2"
eframe = "0.27.2"
egui = "0.27.2"
cpal = "0.15.3"
symphonia = { version = "0.5.4", features = ["all"] }
rfd = "0.14.1"
num-traits = "0.2"
